# blind_controller.rs

./: .env.template  Cargo.toml  README.md  blind_controller.code-workspace  build.rs
.cargo/: config.toml
.github/workflows/: bump_docker_base_images.yml  cargo_sweep_caches.yml  deploy.yml
containers/builder/: Containerfile
containers/sweeper/: Containerfile
hardware/: .gitignore  launch_codium  requirements.txt  run
hardware/projects/: blind_controller.py  rounded_pin.py  self_forming_metric_cutout.py  usb_c_cutout.py  usb_c_project_box.py
partitions-macro/: Cargo.toml
partitions-macro/partitions-macro-types/: Cargo.toml
partitions-macro/partitions-macro-types/src/: lib.rs
partitions-macro/src/: lib.rs
scripts/: bootstrap  doc  ota_build  run  xtensa_blind-ota  xtensa_blind-run
src/: http.rs  lib.rs  logging.rs  ntp.rs  nvs.rs  ota.rs  partitions.rs  rng.rs  rtc.rs  system_time.rs  wifi.rs
